<resources>
    <string name="app_name">Ice Saver</string>
    <string name="logo">Crutch</string>
    <string name="start_start">Start</string>
    <string name="blank_car">Car availability</string>
    <string name="blank_beef">Are you eating beef?</string>
    <string name="blank_smoking_yesno">Are you smoking?</string>
    <string name="blank_smoking_frequency">Smoking frequency</string>
    <string name="blank_title">Blank</string>
    <string-array name="blank_beef_frequency">
        <item>Every day</item>
        <item>3 times a week</item>
        <item>Once per week</item>
    </string-array>
    <string name="blank_milk">Do you eat dairy products?</string>
    <string name="blank_age">Your age (you can\'t change it later):</string>
    <string name="blank_age_hint">Type your age here…</string>
    <string name="blank_please">Please fill out this form:</string>
    <string name="blank_done">Done</string>
    <string name="blank_age_error">Invalid age</string>
    <string name="blank_beef_frequency">Frequency of eating beef</string>
    <string name="blank_age_empty">Please type your age</string>
    <string name="main_settings">Settings</string>
    <string name="main_refill_blank">Change blank</string>

    <string name="main_title">Help to protect our world</string>
    <string name="main_table_environmental_impact">ENVIRONMENT IMPACT</string>
    <string name="main_table_title_on_black">Your effects</string>
    <string name="main_melted_ice_text">melted ice</string>
    <string name="main_died_penguins">penguins died</string>
    <string name="main_text_stat">your statistics</string>

    <string name="main_tonn_life">tonn/life</string>
    <string name="main_tonn_day">kg/day</string>

    <string name="main_p_day">p/day</string>
    <string name="main_p_life">p/life</string>

    

    <string name="add_ice_title">mellting ice</string>
    <string name="add_penguin_title">penguins</string>
    <string name="main_ice_melt_per_day">kg / day</string>
    <string name="main_ice_melt_per_life">bln tonns / life</string>
    <string-array name="tips">
        <item>Switch your computer to standby every time you stop working on it: during lunch break and other urgent matters.</item>
        <item>Turn off the office computer at night and before the weekend.</item>
        <item>Unplug the power cord when you finish working with appliances.</item>
        <item>Eat less meat.</item>
        <item>Walk, change to more efficient cars, use bicycles.</item>
        <item>Travel by train.</item>
        <item>Suggest to friends to go by one car, but full, instead of two, but half-empty, in your country trips.</item>
        <item>Consume responsibly. Do not buy more than you need. Do not buy what you do not need.</item>
        <item>For grocery shopping, use fabric bags.</item>
        <item>If possible, purchase products in cardboard boxes.</item>
        <item>Use plastic bags several times.</item>
    </string-array>
    <string name="notification_title">Ice Saver Tip</string>

</resources>
