<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="0dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/main_title"
                    android:fontFamily="@font/sofia_light"
                    android:textColor="@color/white"
                    android:textSize="35sp" />


                <ImageView
                    android:id="@+id/main_glacier_back"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="330dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/main_glacier_back" />


                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="480dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"

                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/main_title_environment"

                    />





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="530sp"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/main_ellipse_left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"

                        android:layout_marginRight="15dp"
                        android:layout_weight="0.5"

                        android:adjustViewBounds="true"

                        android:background="@drawable/fields_white"
                        android:fontFamily="@font/sofia_light"
                        android:onClick="startAddIce"
                        android:padding="30dp"
                        android:scaleType="fitCenter"
                        android:text="melted ice"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/main_ellipse_right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="0.5"

                        android:adjustViewBounds="true"
                        android:background="@drawable/fields_white"
                        android:fontFamily="@font/sofia_light"
                        android:onClick="startAddPenguin"
                        android:padding="30dp"
                        android:scaleType="fitCenter"
                        android:text="penguins"
                        android:textSize="25sp" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="750dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#309ED0"

                        android:fontFamily="@font/sofia_light"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="@string/main_melted_ice_text"
                        android:textColor="@color/white"
                        android:textSize="50sp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="1"
                            android:background="@drawable/main_text_background_green_second"
                            android:layout_marginTop="35dp"
                            android:gravity="center"
                            >

                            <TextView
                                android:id="@+id/main_melted_ice_per_day"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="65dp"
                                android:layout_weight="0.4"

                                android:text=""
                                android:textColor="@color/primaryText"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.6"


                                android:fontFamily="@font/sofia_light"
                                android:text="@string/main_tonn_day"
                                android:textSize="25sp"
                                android:textColor="@color/white"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="1"
                            android:background="@drawable/main_text_background_green"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/main_melted_for_life"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="65dp"
                                android:layout_weight="0.4"
                                android:text="BLABLA"
                                android:textColor="@color/primaryText"
                                android:textSize="25sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.6"

                                android:fontFamily="@font/sofia_light"
                                android:text="@string/main_tonn_life"
                                android:textSize="25sp"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </FrameLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1050dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#309ED0"

                        android:fontFamily="@font/sofia_light"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="@string/main_died_penguins"
                        android:textColor="@color/white"
                        android:textSize="50sp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="1"
                            android:background="@drawable/main_text_background_green_second"
                            android:layout_marginTop="35dp"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/main_penguins_per_day"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="65dp"
                                android:layout_weight="0.4"
                                android:text=""
                                android:textColor="@color/primaryText"
                                android:textSize="25sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.6"

                                android:text="@string/main_p_day"
                                android:textSize="25sp"
                                android:textColor="@color/white"
                                android:fontFamily="@font/sofia_light" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="1"
                            android:background="@drawable/main_text_background_green"
                            android:gravity="center"
                            android:paddingBottom="5dp">

                            <TextView
                                android:id="@+id/main_penguins_per_life"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="65dp"
                                android:layout_weight="0.4"
                                android:text=""
                                android:textColor="@color/primaryText"
                                android:textSize="25sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.6"

                                android:text="@string/main_p_life"
                                android:textSize="25sp"
                                android:textColor="@color/white"
                                android:fontFamily="@font/sofia_light" />

                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>


                <TextView
                    android:id="@+id/main_ice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="965dp"

                    android:fontFamily="@font/sofia_light"
                    android:gravity="center"
                    android:text="BLABLA"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <ImageView
                    android:id="@+id/main_glacier_front"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="250dp"
                    android:adjustViewBounds="true"

                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/main_glacier_front" />


                <ImageView
                    android:id="@+id/main_penguin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="130dp"

                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/main_penguin" />

                <ImageView
                    android:id="@+id/main_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="130dp"

                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/main_penguin" />

            </FrameLayout>

        </LinearLayout>


    </ScrollView>
</android.support.constraint.ConstraintLayout>